--- a/arch/x86/configs/cyanogenmod_Z00D_defconfig
+++ b/arch/x86/configs/cyanogenmod_Z00D_defconfig
@@ -3276,9 +3276,13 @@ CONFIG_MDFD_VIDEO_ENCODE=y
 # CONFIG_GFX_ON_GI is not set
 # CONFIG_DRM_INTEL_HANDSET is not set
 CONFIG_EXTERNAL_CAMERA=y
-CONFIG_VIDEO_ATOMISP=m
+CONFIG_VIDEO_ATOMISP=y
 CONFIG_VIDEO_ATOMISP_TMP=y
 CONFIG_VIDEO_ATOMISP_CTP=y
+# CONFIG_VIDEO_ATOMISP_CSS2400_V21 is not set
+# CONFIG_VIDEO_ATOMISP_CSS2401 is not set
+# CONFIG_VIDEO_ATOMISP_CSS2401_LEGACY_V21 is not set
+CONFIG_VIDEO_ATOMISP_CSS2300=y
 # CONFIG_VIDEO_MT9E013 is not set
 # CONFIG_VIDEO_OV5693 is not set
 # CONFIG_VIDEO_IMXVB is not set
