--- a/arch/x86/configs/cyanogenmod_Z00D_defconfig
+++ b/arch/x86/configs/cyanogenmod_Z00D_defconfig
@@ -217,13 +217,10 @@ CONFIG_OPROFILE=y
 # CONFIG_OPROFILE_EVENT_MULTIPLEX is not set
 CONFIG_HAVE_OPROFILE=y
 CONFIG_OPROFILE_NMI_TIMER=y
-CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
-CONFIG_KPROBES_ON_FTRACE=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_ARCH_USE_BUILTIN_BSWAP=y
-CONFIG_KRETPROBES=y
 CONFIG_HAVE_IOREMAP_PROT=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -265,21 +262,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
-# CONFIG_MODVERSIONS is not set
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-CONFIG_MODULE_SIG_SHA256=y
-# CONFIG_MODULE_SIG_SHA384 is not set
-# CONFIG_MODULE_SIG_SHA512 is not set
-CONFIG_MODULE_SIG_HASH="sha256"
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -916,7 +899,6 @@ CONFIG_BQL=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_TCPPROBE is not set
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
@@ -936,7 +918,7 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_WEXT is not set
 # CONFIG_LIB80211 is not set
 # CONFIG_CFG80211_ALLOW_RECONNECT is not set
-CONFIG_MAC80211=m
+CONFIG_MAC80211=y
 CONFIG_MAC80211_HAS_RC=y
 # CONFIG_MAC80211_RC_PID is not set
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1075,7 +1057,7 @@ CONFIG_UID_STAT=y
 #
 # Texas Instruments shared transport line discipline
 #
-CONFIG_TI_ST=m
+CONFIG_TI_ST=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 
@@ -1446,7 +1428,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
-# CONFIG_TOUCHSCREEN_HIMAX_HX8528_ME372CL is not set
 CONFIG_TOUCHSCREEN_FT3X17=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -1626,7 +1607,6 @@ CONFIG_I2C_GPIO=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_SCx200_ACB is not set
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -2126,8 +2106,8 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_VIDEOBUF_GEN=m
-CONFIG_VIDEOBUF_VMALLOC=m
+CONFIG_VIDEOBUF_GEN=y
+CONFIG_VIDEOBUF_VMALLOC=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
 CONFIG_VIDEOBUF2_VMALLOC=y
@@ -2271,8 +2251,8 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # Customise DVB Frontends
 #
 # CONFIG_DVB_AU8522_V4L is not set
-CONFIG_DVB_TUNER_DIB0070=m
-CONFIG_DVB_TUNER_DIB0090=m
+CONFIG_DVB_TUNER_DIB0070=y
+CONFIG_DVB_TUNER_DIB0090=y
 
 #
 # Tools to develop new frontends
@@ -2547,7 +2527,6 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_CHT_MACHINE is not set
 # CONFIG_SND_CTP_MACHINE is not set
 CONFIG_SND_CTP_MACHINE_5647=y
-# CONFIG_SND_CTP_MACHINE_5671 is not set
 CONFIG_SND_INTEL_SST=y
 CONFIG_SND_SST_PLATFORM=y
 CONFIG_SND_SOC_COMMS_SSP=y
@@ -3017,17 +2996,11 @@ CONFIG_STAGING=y
 # CONFIG_W35UND is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
-# CONFIG_COMEDI is not set
 # CONFIG_ASUS_OLED is not set
-# CONFIG_R8187SE is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS5139 is not set
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
 # CONFIG_DX_SEP is not set
 # CONFIG_DX_SEP54 is not set
 CONFIG_ZSMALLOC=y
@@ -3036,7 +3009,6 @@ CONFIG_ZRAM=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
-# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -3067,8 +3039,6 @@ CONFIG_SW_SYNC=y
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 CONFIG_NET_VENDOR_SILICOM=y
-# CONFIG_SBYPASS is not set
-# CONFIG_BPCTL is not set
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
 # CONFIG_USB_DWC2 is not set
@@ -3180,7 +3150,7 @@ CONFIG_SENSORS_LPS331AP=y
 CONFIG_SENSORS_LSM303_MAG=y
 CONFIG_SENSORS_MID_VDD=y
 # CONFIG_SENSORS_MRFL_OCD is not set
-# CONFIG_SENSORS_PSH_BYT is not set
+CONFIG_SENSORS_PSH_BYT=y
 # CONFIG_GENERAL_SENSOR is not set
 # CONFIG_PS_STM8T143 is not set
 # CONFIG_PS_SX9500 is not set
@@ -3201,7 +3171,6 @@ CONFIG_BCM_BT_LPM=y
 #
 # Fork of Texas Instruments shared transport line discipline
 #
-# CONFIG_TI_ST_FORK is not set
 # CONFIG_TRACEPOINT_TO_LOG is not set
 # CONFIG_INTEL_IQVANDROID is not set
 # CONFIG_RAWIO is not set
@@ -3218,7 +3187,6 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_FORK=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_GOODIX_GT9XX is not set
 CONFIG_INPUT_INTEL_MID_VIBRA=y
-# CONFIG_INPUT_INTEL_MID_VIBRA_PF450CL is not set
 CONFIG_LEDS_ASUS_ZC500CL=y
 # CONFIG_LPSS_DMA is not set
 # CONFIG_NFC_PN544_PLATFORM_DATA is not set
@@ -3290,24 +3258,24 @@ CONFIG_VIDEO_ATOMISP_CSS2300=y
 # CONFIG_VIDEO_OV2722 is not set
 # CONFIG_VIDEO_M10MO is not set
 # CONFIG_VIDEO_GC2235 is not set
-CONFIG_VIDEO_OV8830=m
+CONFIG_VIDEO_OV8830=y
 # CONFIG_VIDEO_OV8858 is not set
 # CONFIG_VIDEO_CSI_XACTOR is not set
 # CONFIG_VIDEO_MSRLIST_HELPER is not set
 # CONFIG_VIDEO_MT9D113 is not set
-CONFIG_VIDEO_MT9M114=m
+CONFIG_VIDEO_MT9M114=y
 # CONFIG_VIDEO_MT9V113 is not set
 # CONFIG_VIDEO_OV5640 is not set
-CONFIG_VIDEO_AR0543_RAW=m
-CONFIG_VIDEO_HM2056_RAW=m
+CONFIG_VIDEO_AR0543_RAW=y
+CONFIG_VIDEO_HM2056_RAW=y
 # CONFIG_VIDEO_AP1302 is not set
 # CONFIG_VIDEO_PIXTER is not set
 # CONFIG_VIDEO_OV680 is not set
-CONFIG_VIDEO_TSB=m
-CONFIG_VIDEO_SKY81296=m
-CONFIG_VIDEO_HM2051=m
-CONFIG_VIDEO_GC2155=m
-CONFIG_VIDEO_LM3554=m
+CONFIG_VIDEO_TSB=y
+CONFIG_VIDEO_SKY81296=y
+CONFIG_VIDEO_HM2051=y
+CONFIG_VIDEO_GC2155=y
+CONFIG_VIDEO_LM3554=y
 # CONFIG_VIDEO_LM3642 is not set
 # CONFIG_VIDEO_LM3559 is not set
 # CONFIG_EXTERNAL_CAMERA_IPU is not set
@@ -3541,7 +3509,6 @@ CONFIG_TIMER_STATS=y
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=400
-# CONFIG_DEBUG_KMEMLEAK_TEST is not set
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
@@ -3584,7 +3551,6 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_CPU_STALL_VERBOSE=y
 CONFIG_RCU_CPU_STALL_INFO=y
 # CONFIG_RCU_TRACE is not set
-# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -3630,9 +3596,8 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
-CONFIG_KPROBE_EVENT=y
 # CONFIG_UPROBE_EVENT is not set
-CONFIG_PROBE_EVENTS=y
+# CONFIG_PROBE_EVENTS is not set
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_FUNCTION_PROFILER=y
@@ -3641,8 +3606,6 @@ CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_MMIOTRACE is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
-# CONFIG_RBTREE_TEST is not set
-# CONFIG_INTERVAL_TREE_TEST is not set
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
@@ -3662,13 +3625,10 @@ CONFIG_DEBUG_STACKOVERFLOW=y
 # CONFIG_X86_PTDUMP is not set
 CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_RODATA_TEST is not set
-# CONFIG_DEBUG_SET_MODULE_RONX is not set
-CONFIG_DEBUG_NX_TEST=m
 CONFIG_DOUBLEFAULT=y
 # CONFIG_DEBUG_TLBFLUSH is not set
 # CONFIG_IOMMU_STRESS is not set
 CONFIG_HAVE_MMIOTRACE_SUPPORT=y
-# CONFIG_X86_DECODER_SELFTEST is not set
 CONFIG_IO_DELAY_TYPE_0X80=0
 CONFIG_IO_DELAY_TYPE_0XED=1
 CONFIG_IO_DELAY_TYPE_UDELAY=2
@@ -3739,7 +3699,6 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
@@ -3892,8 +3851,5 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
-
-# ASUS_BSP +++ "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
 CONFIG_ASUS_EVT_LOG=y
-# ASUS_BSP --- "[ZE500CL][evtlog][NA][Spec] Add config for checking if the porting of ASUSEvtlog is ready"
 CONFIG_BOARD_CTP=y
