--- a/arch/x86/configs/cyanogenmod_Z00D_defconfig
+++ b/arch/x86/configs/cyanogenmod_Z00D_defconfig
@@ -1040,13 +1040,13 @@ CONFIG_INTEL_MID_PTI=y
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
-CONFIG_UID_CPUTIME=y
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -2514,6 +2514,7 @@ CONFIG_SND_INTEL_MID_I2S_ENABLE_LLI=y
 CONFIG_SND_INTEL_ALSA_SSP=y
 CONFIG_SND_INTEL_ALSA_SSP_MASTER_MODE=y
 CONFIG_SND_INTEL_ALSA_SSP_BUILTIN_MASTER_MODE=y
+# CONFIG_SND_INTEL_ALSA_IFX is not set
 # CONFIG_SND_SPI is not set
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=y
@@ -3030,15 +3031,11 @@ CONFIG_ZRAM=y
 # Android
 #
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
-CONFIG_ANDROID_LOGGER_PTI=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -3289,6 +3286,11 @@ CONFIG_VIDEO_LM3554=y
 # CONFIG_CSS2600_STUB is not set
 
 #
+# Android
+#
+CONFIG_ANDROID_BINDER_IPC=y
+
+#
 # Firmware Drivers
 #
 # CONFIG_EDD is not set
@@ -3357,9 +3359,8 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
-CONFIG_CIFS=y
-CONFIG_CIFS_XATTR=y
-CONFIG_CIFS_POSIX=y
+# CONFIG_NTFS_DEBUG is not set
+# CONFIG_NTFS_RW is not set
 
 #
 # Pseudo filesystems
@@ -3397,6 +3398,7 @@ CONFIG_ECRYPT_FS=y
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
+# CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_FTRACE=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
